fixed box align

--- a/style.css
+++ b/style.css
@@ -17,10 +17,22 @@ div {
   background-color: lightblue;
   text-align: center;
 }
+box2 {
+
+}
 li {
   font-family: "Courier New", Courier, monospace;
   font-size: large;
   font-weight: 200;
+}
+.parent {
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    justify-items: center; */
+   
 }
 .container {
   margin: 0 auto;
@@ -28,7 +40,17 @@ li {
   border-radius: 8px;
   width: 50%;
   text-align: center;
+  justify-items: center;
+  /* margin: 20px; */
+  
 }
+
+.box1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 img {
   max-width: 150px;
   max-height: 100%;
